<resources>
    <string name="app_name">Learning Zoo</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>


    <!-- personal additions -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="hint_subjectid">Subject ID</string>
    <string name="session">Subject sessions</string>
    <string name="go_back">Go Back</string>
    <string name="classroom">Classroom: xxx</string>
    <string name="lecturer">Lecturer name: xxx</string>
    <string name="subjectid">Subject ID: xxx</string>
</resources>
