<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sutd.learningzooandroid.IndividualSessionActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/include2" />

    <include
        layout="@layout/item_graph"
        android:id="@+id/includegraph"/>
    <TextView
        android:id="@+id/classroom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/classroom"
        />
    <TextView
        android:id="@+id/lecturer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lecturer"
        />
    <TextView
        android:id="@+id/subjectid"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="@string/subjectid"
    />

</RelativeLayout>
