<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sutd.learningzooandroid.RegistrationActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/learning_zoo_logo_mdpi"/>


    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/main_logo"
        android:id="@+id/reg_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:inputType="textEmailAddress"
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_above="@+id/reg_subjectid_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_subjectid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <android.support.design.widget.TextInputEditText
            android:inputType="number"
            android:id="@+id/reg_subId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_subjectid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/reg_email_layout"
            android:layout_above="@+id/reg_password_layout"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_subjectid_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <android.support.design.widget.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_below="@+id/reg_subjectid_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

    </android.support.design.widget.TextInputLayout>

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/register1"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:onClick="registerNewUser"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
